--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@redwoodjs/starter-standard",
+  "name": "Machinen",
   "version": "1.0.0",
-  "description": "Build fast, server-driven webapps on Cloudflare with SSR, RSC, and realtime. ",
+  "description": "Machinen is a web-based IDE for RedwoodSDK",
   "main": "index.js",
   "type": "module",
   "keywords": [],
   "author": "",
-  "license": "MIT",
+  "license": "FSL-1.1-MIT",
   "private": true,
   "scripts": {
     "build": "vite build",
@@ -35,14 +35,13 @@
     "@tailwindcss/vite": "^4.1.8",
     "monaco-editor": "^0.52.2",
     "react-hotkeys-hook": "^5.1.0",
-    "rwsdk": "0.0.87",
+    "rwsdk": "0.1.0-alpha.18",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "prisma": "~6.8.2",
     "typescript": "^5.8.3",
     "vibe-rules": "^0.2.31",
     "vite": "^6.2.6",
