--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prepare": "vibe-rules install cursor"
   },
   "dependencies": {
+    "@cloudflare/containers": "^0.0.8",
     "@monaco-editor/react": "^4.6.0",
     "@prisma/adapter-d1": "~6.8.2",
     "@prisma/client": "~6.8.2",
@@ -36,7 +37,8 @@
     "monaco-editor": "^0.52.2",
     "react-hotkeys-hook": "^5.1.0",
     "rwsdk": "0.1.0-alpha.18",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "wrangler": "https://pkg.pr.new/wrangler@9657"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
@@ -44,8 +46,7 @@
     "@types/react-dom": "^19.1.2",
     "typescript": "^5.8.3",
     "vibe-rules": "^0.2.31",
-    "vite": "^6.2.6",
-    "wrangler": "^4.16.0"
+    "vite": "^6.2.6"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
