Make editor work locally, take 2.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,8 +1,8 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "__change_me__",
+  "name": "machinen",
   "main": "src/worker.tsx",
-  "compatibility_date": "2024-09-23",
+  "compatibility_date": "2025-06-18",
   "compatibility_flags": ["nodejs_compat"],
   "assets": {
     "binding": "ASSETS"
@@ -10,28 +10,30 @@
   "observability": {
     "enabled": true
   },
-  "durable_objects": {
-    "bindings": [
-      {
-        "name": "SESSION_DURABLE_OBJECT",
-        "class_name": "SessionDurableObject"
+  "containers": [
+    {
+      "name": "rwsdk",
+      "image": "./Dockerfile",
+      "class_name": "Container",
+      "max_instances": 2,
+      "configuration": {
+        "memory": "4GB",
+        "vcpu": 2
       }
-    ]
-  },
-  "vars": {
-    "WEBAUTHN_APP_NAME": "__change_me__"
-  },
+    }
+  ],
   "migrations": [
     {
       "tag": "v1",
-      "new_sqlite_classes": ["SessionDurableObject"]
+      "new_sqlite_classes": ["Container"]
     }
   ],
-  "d1_databases": [
-    {
-      "binding": "DB",
-      "database_name": "__change_me__",
-      "database_id": "__change_me__"
-    }
-  ]
+  "durable_objects": {
+    "bindings": [
+      {
+        "class_name": "Container",
+        "name": "CONTAINER"
+      }
+    ]
+  }
 }
