--- a/container/package.json
+++ b/container/package.json
@@ -1,55 +1,46 @@
 {
-  "name": "Machinen",
+  "name": "rwsdk-host",
   "version": "1.0.0",
-  "description": "Machinen is a web-based IDE for RedwoodSDK",
+  "description": "Build fast, server-driven webapps on Cloudflare with SSR, RSC, and realtime. ",
   "main": "index.js",
   "type": "module",
   "keywords": [],
   "author": "",
-  "license": "FSL-1.1-MIT",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "build": "vite build",
     "dev": "NODE_ENV=${NODE_ENV:-development} vite dev",
+    "dev:server": "node server.js --host 0.0.0.0",
+    "dev:all": "concurrently \"pnpm run dev:server\" \"npm run dev -- --host 0.0.0.0 --port 8910\"",
     "dev:init": "rw-scripts dev-init",
     "preview": "vite preview",
     "worker:run": "rw-scripts worker-run",
     "clean": "npm run clean:vite",
     "clean:vite": "rm -rf ./node_modules/.vite",
     "release": "rw-scripts ensure-deploy-env && npm run clean && RWSDK_DEPLOY=1 npm run build && wrangler deploy",
-    "generate": "rw-scripts ensure-env && prisma generate && wrangler types",
+    "migrate:new": "rw-scripts migrate-new",
+    "generate": "rw-scripts ensure-env && wrangler types",
     "check": "npm run generate && npm run types",
     "types": "tsc",
     "prepare": "vibe-rules install cursor"
   },
   "dependencies": {
-    "@cloudflare/containers": "^0.0.10",
-    "@monaco-editor/react": "^4.6.0",
-    "@prisma/adapter-d1": "~6.8.2",
-    "@prisma/client": "~6.8.2",
-    "@tailwindcss/vite": "^4.1.8",
-    "monaco-editor": "^0.52.2",
-    "react-hotkeys-hook": "^5.1.0",
-    "rwsdk": "0.1.0",
-    "tailwindcss": "^4.1.8"
+    "rwsdk": "0.0.85"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "concurrently": "^9.1.2",
     "typescript": "^5.8.3",
     "vibe-rules": "^0.2.31",
-    "vite": "^6.3.5",
-    "@cloudflare/vite-plugin": "1.7.4",
-    "@cloudflare/workers-types": "^4.20250407.0",
-    "wrangler": "https://pkg.pr.new/wrangler@9657"
+    "vite": "^6.2.6",
+    "wrangler": "^4.16.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "@prisma/client",
-      "@prisma/engines",
       "esbuild",
-      "prisma",
       "sharp",
       "workerd"
     ]
