Rm db things in wrangler config

--- a/container/wrangler.jsonc
+++ b/container/wrangler.jsonc
@@ -3,9 +3,7 @@
   "name": "container",
   "main": "src/worker.tsx",
   "compatibility_date": "2024-09-23",
-  "compatibility_flags": [
-    "nodejs_compat"
-  ],
+  "compatibility_flags": ["nodejs_compat"],
   "assets": {
     "binding": "ASSETS"
   },
@@ -20,22 +18,12 @@
       }
     ]
   },
-  "vars": {
-    "WEBAUTHN_APP_NAME": "__change_me__"
-  },
+  "vars": {},
   "migrations": [
     {
       "tag": "v1",
-      "new_sqlite_classes": [
-        "SessionDurableObject"
-      ]
+      "new_sqlite_classes": ["SessionDurableObject"]
     }
   ],
-  "d1_databases": [
-    {
-      "binding": "DB",
-      "database_name": "__change_me__",
-      "database_id": "__change_me__"
-    }
-  ]
+  "d1_databases": []
 }
