--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clean": "npm run clean:vite",
     "clean:vite": "rm -rf ./node_modules/.vite",
     "release": "rw-scripts ensure-deploy-env && npm run clean && RWSDK_DEPLOY=1 npm run build && wrangler deploy",
-    "generate": "rw-scripts ensure-env && prisma generate && wrangler types",
+    "generate": "rw-scripts ensure-env && wrangler types",
     "check": "npm run generate && npm run types",
     "types": "tsc",
     "prepare": "vibe-rules install cursor"
@@ -25,8 +25,6 @@
   "dependencies": {
     "@cloudflare/containers": "^0.0.10",
     "@monaco-editor/react": "^4.6.0",
-    "@prisma/adapter-d1": "~6.8.2",
-    "@prisma/client": "~6.8.2",
     "@tailwindcss/vite": "^4.1.8",
     "monaco-editor": "^0.52.2",
     "react-hotkeys-hook": "^5.1.0",
@@ -46,10 +44,7 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "@prisma/client",
-      "@prisma/engines",
       "esbuild",
-      "prisma",
       "sharp",
       "workerd"
     ]
