--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "prepare": "vibe-rules install cursor"
   },
   "dependencies": {
-    "@cloudflare/containers": "^0.0.10",
-    "@monaco-editor/react": "^4.6.0",
-    "@tailwindcss/vite": "^4.1.8",
+    "@cloudflare/containers": "^0.0.18",
+    "@monaco-editor/react": "^4.7.0",
+    "@tailwindcss/vite": "^4.1.11",
     "monaco-editor": "^0.52.2",
     "react-hotkeys-hook": "^5.1.0",
-    "rwsdk": "0.1.1",
+    "rwsdk": "^0.1.9",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
-    "@cloudflare/vite-plugin": "1.7.4",
+    "@cloudflare/vite-plugin": "1.9.0",
     "@cloudflare/workers-types": "^4.20250407.0",
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.2",
@@ -40,7 +40,7 @@
     "typescript": "^5.8.3",
     "vibe-rules": "^0.2.31",
     "vite": "^6.3.5",
-    "wrangler": "https://pkg.pr.new/wrangler@9657",
+    "wrangler": "^4.23.0",
     "ws": "^8.18.2"
   },
   "pnpm": {
