--- a/container/package.json
+++ b/container/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.8.2",
+    "execa": "^8.0.1",
     "hono": "^4.1.0",
     "rwsdk": "0.1.1"
   },
