--- a/container/package.json
+++ b/container/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "vite build",
     "dev": "NODE_ENV=${NODE_ENV:-development} vite dev",
-    "dev:server": "node --experimental-strip-types sandbox.ts",
+    "dev:server": "node --experimental-strip-types --watch sandbox2.ts",
     "dev:all": "concurrently \"pnpm run dev:server\" \"npm run dev -- --host 0.0.0.0 --port 8910\"",
     "dev:init": "rw-scripts dev-init",
     "preview": "vite preview",
