--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "@cloudflare/containers": "^0.0.18",
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@xterm/addon-attach": "^0.11.0",
     "monaco-editor": "^0.52.2",
     "react-hotkeys-hook": "^5.1.0",
-    "rwsdk": "^0.1.9",
-    "tailwindcss": "^4.1.8"
+    "rwsdk": "^0.1.10",
+    "tailwindcss": "^4.1.8",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.9.0",
