--- a/package.json
+++ b/package.json
@@ -25,10 +25,20 @@
   "dependencies": {
     "@cloudflare/containers": "^0.0.18",
     "@monaco-editor/react": "^4.7.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.11",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
     "monaco-editor": "^0.52.2",
     "react-hotkeys-hook": "^5.1.0",
-    "rwsdk": "^0.1.10",
+    "react-resizable-panels": "^3.0.3",
+    "react-xtermjs": "^1.0.10",
+    "rwsdk": "^0.1.12",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.8",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0"
@@ -39,6 +49,7 @@
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5.8.3",
     "vibe-rules": "^0.2.31",
     "vite": "^6.3.5",
